fix spacing on paragraph

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ body {
   margin: 0px;
   text-align: center;
   font-size: 20px;
+  
 }
 
 .main-section {
@@ -417,6 +418,11 @@ li {
   .icon-h3 {
     position: relative;
     top: 25px;
+  }
+
+  h6{
+    position:relative;
+    bottom:10px;
   }
 
 }
